@@ -1,4 +1,4 @@
-$Id: THANKS,v 1.65 2002/08/01 10:23:26 stelian Exp $
+$Id: THANKS,v 1.66 2002/08/18 20:52:04 stelian Exp $
 
 Dump and restore were written by the people of the CSRG at the University
 of California, Berkeley.
@@ -73,6 +73,7 @@ Dejan Muhamedagic	dejan@quant-x.com
 Lukas Nellen		L.Nellen@ThPhys.Uni-Heidelberg.DE
 Nuno Oliveira		nuno@eq.uc.pt
 Brent Olson		night@halcyon.com
+Jorgen Ostling		jorgen_ostling@users.sourceforge.net
 Jerry Peters		gapeters@worldnet.att.net
 David B. Peterson	dave@toppledwagon.com
 Dave Platt		dplatt@snulbug.mtview.ca.us
