@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.192 2002/08/01 10:23:26 stelian Exp $
+$Id: CHANGES,v 1.193 2002/08/18 20:52:04 stelian Exp $
 
 Changes between versions 0.4b31 and 0.4b32 (released ?????????????)
 ===================================================================
@@ -11,6 +11,11 @@ Changes between versions 0.4b31 and 0.4b32 (released ?????????????)
 	scheme, the user would need to have write access on the file.
 	Thanks to Richard Johnson <Richard.Johnson3@ey.com> for 
 	reporting the bug (originally a bugtraq post).
+
+2.	Fixed interactive 'ls' which caused spurious errors warnings
+	about 'undefined filetypes' detected. Thanks to Jorgen Ostling 
+	<jorgen_ostling@users.sourceforge.net> for reporting this 
+	bug.
 
 Changes between versions 0.4b30 and 0.4b31 (released July 30, 2002)
 ===================================================================
